--- a/backend/src/.env.example
+++ b/backend/src/.env.example
@@ -1,2 +1,14 @@
+NODE_ENV=development
 PORT=3000
+APP_NAME=oryza-backend
+APP_VERSION=0.1.0
+
+FRONTEND_URL=http://localhost:5173
+MOBILE_URL=http://localhost:19006
+CORS_ORIGINS=http://localhost:5173,http://localhost:19006
+
 DATABASE_URL=postgres://oryza:oryza@localhost:5432/oryza
+
+JWT_SECRET=please-set-me
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
