--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.16.2",
     "argon2": "^0.44.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
